--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "jquery": "3.5.0",
     "local-web-server": "4.0.0",
     "parcel-bundler": "1.12.4",
-    "sass": "1.26.3"
+    "sass": "1.26.3",
+    "uuid": "8.0.0"
   }
 }
